--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/recipes": "^0.5.5",
     "eslint-define-config": "^2.1.0",
+    "koko-react-select": "^1.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
