feat : 메인레이아웃 및 메뉴 퍼블리싱
- 기본 구조 및 컴포넌트 구현

#feat/4-mainLayout

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/recipes": "^0.5.5",
     "eslint-define-config": "^2.1.0",
+    "framer-motion": "^12.9.2",
     "koko-react-select": "^1.0.8",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
