feat : 메인레이아웃 및 메뉴 퍼블리싱 (#5)

--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "eslint-define-config": "^2.1.0",
+    "framer-motion": "^12.9.2",
     "koko-react-select": "^1.0.8",
     "lucide-react": "^0.503.0",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
