--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.2",
-    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query": "^5.75.2",
+    "@tanstack/react-query-devtools": "^5.75.2",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/recipes": "^0.5.5",
+    "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "eslint-define-config": "^2.1.0",
@@ -30,8 +32,10 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.1",
     "react-router-dom": "^6.30.0",
+    "sonner": "^2.0.3",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
@@ -48,6 +52,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "msw": "^2.7.6",
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
