--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.2",
     "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-table": "^8.21.3",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/recipes": "^0.5.5",
     "clsx": "^2.1.1",
@@ -25,13 +26,15 @@
     "eslint-define-config": "^2.1.0",
     "framer-motion": "^12.9.2",
     "koko-react-select": "^1.0.8",
-    "lucide-react": "^0.503.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^6.30.0",
+    "vite-plugin-svgr": "^4.3.0",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
