--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
     "target": "ES6",
     "module": "ES6",
     "lib": ["DOM", "ES6"],
+    "types": ["vite/client", "vite-plugin-svgr/client"],
     "allowJs": false,
     "jsx": "react-jsx",
+    "noImplicitAny": false,
     "strict": true,
     "moduleResolution": "Node",
     "esModuleInterop": true,
