--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.56.1",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^6.30.0",
+    "react-spinners": "^0.17.0",
     "vite-plugin-svgr": "^4.3.0",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
