--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-slot": "^1.0.2",
@@ -27,8 +28,8 @@
     "eslint-define-config": "^2.1.0",
     "framer-motion": "^12.9.2",
     "koko-react-select": "^1.0.8",
-    "lucide-react": "^0.503.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.56.1",
     "react-router-dom": "^6.30.0",
     "sonner": "^2.0.3",
+    "uuid": "^11.1.0",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
