feat : 거래내역 퍼블리싱 및 top bar 구현 (#12)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "jsx": "react-jsx",
+    "noImplicitAny": false,
     "strict": true,
     "moduleResolution": "bundler",
     "esModuleInterop": true,
