--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.2",
+    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-query-devtools": "^5.75.2",
     "@vanilla-extract/css": "^1.17.1",
@@ -27,13 +29,14 @@
     "eslint-define-config": "^2.1.0",
     "framer-motion": "^12.9.2",
     "koko-react-select": "^1.0.8",
-    "lucide-react": "^0.503.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.1",
+    "react-paginate": "^8.3.0",
     "react-router-dom": "^6.30.0",
     "sonner": "^2.0.3",
     "zod": "^3.24.3",
