--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.2",
-    "@tanstack/react-query": "^5.74.4",
-    "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-query-devtools": "^5.75.2",
+    "@tanstack/react-table": "^8.21.3",
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/recipes": "^0.5.5",
     "axios": "^1.9.0",
@@ -45,6 +44,7 @@
     "react-paginate": "^8.3.0",
     "react-router-dom": "^6.30.0",
     "sonner": "^2.0.3",
+    "vite-plugin-svgr": "^4.3.0",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
