--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "eslint-define-config": "^2.1.0",
     "framer-motion": "^12.9.2",
     "koko-react-select": "^1.0.8",
-    "lucide-react": "^0.503.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.30.0",
     "sonner": "^2.0.3",
     "zod": "^3.24.3",
+    "zod-validation-error": "^3.4.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
