--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^4.1.0",
     "eslint-define-config": "^2.1.0",
     "framer-motion": "^12.9.2",
+    "http-status-codes": "^2.3.0",
     "immer": "^10.1.1",
     "koko-react-select": "^1.0.8",
     "lodash": "^4.17.21",
@@ -42,6 +43,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
