--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-slot": "^1.0.2",
@@ -44,6 +45,7 @@
     "react-paginate": "^8.3.0",
     "react-router-dom": "^6.30.0",
     "sonner": "^2.0.3",
+    "uuid": "^11.1.0",
     "vite-plugin-svgr": "^4.3.0",
     "zod": "^3.24.3",
     "zustand": "^5.0.3"
