--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^7.56.1",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^6.30.0",
+    "react-spinners": "^0.17.0",
     "sonner": "^2.0.3",
     "uuid": "^11.1.0",
     "vite-plugin-svgr": "^4.3.0",
