--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/recipes": "^0.5.5",
     "axios": "^1.9.0",
+    "axios-auth-refresh": "^3.3.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "eslint-define-config": "^2.1.0",
@@ -46,6 +47,7 @@
     "react-hook-form": "^7.56.1",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^6.30.0",
+    "react-spinners": "^0.17.0",
     "sonner": "^2.0.3",
     "uuid": "^11.1.0",
     "vite-plugin-svgr": "^4.3.0",
