--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
     "@radix-ui/react-slot": "^1.0.2",
@@ -30,10 +31,13 @@
     "@vanilla-extract/css": "^1.17.1",
     "@vanilla-extract/recipes": "^0.5.5",
     "axios": "^1.9.0",
+    "axios-auth-refresh": "^3.3.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "eslint-define-config": "^2.1.0",
     "framer-motion": "^12.9.2",
+    "http-status-codes": "^2.3.0",
+    "immer": "^10.1.1",
     "koko-react-select": "^1.0.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
@@ -49,6 +53,7 @@
     "uuid": "^11.1.0",
     "vite-plugin-svgr": "^4.3.0",
     "zod": "^3.24.3",
+    "zod-validation-error": "^3.4.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -58,7 +63,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.15.17",
+    "@types/node": "^22.15.18",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@typescript-eslint/eslint-plugin": "^8.31.0",
