--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.1",
     "react-paginate": "^8.3.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.30.0",
     "react-spinners": "^0.17.0",
     "sonner": "^2.0.3",
