--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "koko-react-select": "^1.0.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
+    "pretendard": "^1.3.9",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
