--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios-auth-refresh": "^3.3.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "eslint-define-config": "^2.1.0",
     "framer-motion": "^12.9.2",
     "http-status-codes": "^2.3.0",
