--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.11",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.2.2",
     "@tanstack/react-query": "^5.75.2",
@@ -34,12 +35,10 @@
     "axios-auth-refresh": "^3.3.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dayjs": "^1.11.13",
     "eslint-define-config": "^2.1.0",
     "framer-motion": "^12.9.2",
     "http-status-codes": "^2.3.0",
     "immer": "^10.1.1",
-    "koko-react-select": "^1.0.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
     "pretendard": "^1.3.9",
