--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc -b && vite build",
+    "start": "vite preview",
     "dev": "vite",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,css}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,json,css}\"",
@@ -39,7 +40,6 @@
     "framer-motion": "^12.9.2",
     "http-status-codes": "^2.3.0",
     "immer": "^10.1.1",
-    "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
     "pretendard": "^1.3.9",
     "react": "^19.0.0",
